small fixes
Task9

Task8

Task7

Task6

Task5

Task4 + small fixes

Task3

Task2

Task1